--- a/css/style.css
+++ b/css/style.css
@@ -28,3 +28,26 @@ body {
     --main-gradient: linear-gradient(180deg, rgba(0, 0, 206, 1) 0%, rgba(17, 184, 190, 1) 100%);
     --main-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
 }
+
+h1{
+    font-size: 48px;
+    margin-bottom: 25px;
+}
+
+p{
+    font-size: 18px;
+}
+
+.blog-title { 
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    color: white;
+    background: var(--main-gradient);
+    text-align: center;
+    justify-content: center;
+    height: 34vh;
+    padding: 0 25px;
+    box-shadow: var(--main-shadow);
+    
+}
