Navigation Bar and Layouts' fixes

--- a/css/style.css
+++ b/css/style.css
@@ -87,10 +87,11 @@ p {
 .banner-full {
     display: none;
 }
+
 @media (min-width:1100px) {
 
     .blog-title {
-        height: 34vh;
+        height: 500px;
     }
     .main-content {
         display: grid;
@@ -107,13 +108,22 @@ p {
     }
     .sidebar h2 {
         height: 24vh;
+        display: flex;
         flex-direction: column;
         justify-content: center;
-        display: flex;
-    }
+        
+    } 
 
     .banner-full {
         display: inline-block;
+    }
+    
+    h2, h3{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        height: 24vh;
+        text-align: center;
     }
 
     
@@ -147,9 +157,7 @@ p {
     footer{
         grid-area: footer;
     }
-    /* .sidebar h2 {
-        height: 100px;
-    } */
+    
     
     .last {
         display: none;
