--- a/css/article.css
+++ b/css/article.css
@@ -4,9 +4,6 @@
 color: gray;
 }
 
-.sidebar{
-    grid-area: sb;
-}
 
 .content{
     display: grid;
@@ -24,10 +21,13 @@ color: gray;
     
 }
 
+.sidebar{
+    grid-area: sb;
+}
 @media(min-width:1100px){
     .content{
         grid-template-columns: 25% 75%;
-        grid-template-rows: 300px 1fr auto auto;
+        grid-template-rows: 0.5fr 1fr auto auto;
         grid-template-areas:   
     "tl tl"
     "img img"
@@ -48,7 +48,7 @@ color: gray;
 
 }
 
-@media(min-width:600px) and (max-width:1100px){
+@media(min-width:600px) and (max-width:1200px){
     .content{
         width: 100%;
         grid-template-columns: 25% 75%;
@@ -64,6 +64,19 @@ color: gray;
         height: initial;
         border-radius: 5px;
         box-shadow: var(--main-shadow);
+        justify-content: initial;
+        
+    }
+    .sidebar h2{
+        font-size: 32px;
+    }
+    .sidebar ul li a{
+        font-size: 18px;
+    }
+    
+
+    .banner-full{
+        display: none;
     }
 
 }
