--- a/css/navbar.css
+++ b/css/navbar.css
@@ -4,7 +4,7 @@ nav {
     background-color: white;
     height: 80px;
     width: 100%;
-    position: sticky;
+    position: fixed;
     box-shadow: var(--main-shadow);
     top: 0;
 }
