--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,9 @@ body {
     --main-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
 }
 
+u{
+    text-decoration: underline;
+}
 h1 {
     font-size: 48px;
     margin-bottom: 25px;
@@ -34,6 +37,17 @@ h1 {
 
 p {
     font-size: 18px;
+}
+.quote{
+    margin: 25px;
+    border-radius: 5px;
+    background-color: rgb(194, 194, 194, 0.5);
+    box-shadow: var(--main-shadow);
+    text-align: center;
+}
+q{
+    font-style: italic;
+    padding: 45px;
 }
 
 .blog-title {
