--- a/css/article.css
+++ b/css/article.css
@@ -7,7 +7,7 @@ color: gray;
 
 .content{
     display: grid;
-    grid-template-rows: 300px 1fr auto auto;
+    grid-template-rows: 300px 1fr auto auto auto;
     grid-template-columns: 100%;
     
     grid-template-areas:   
@@ -15,6 +15,7 @@ color: gray;
     "img"
     "ar"
     "sb"
+    "ft"
     ;    
     text-align: center;
     justify-content: center;
@@ -24,15 +25,17 @@ color: gray;
 .sidebar{
     grid-area: sb;
 }
+
 @media(min-width:1100px){
     .content{
         grid-template-columns: 25% 75%;
-        grid-template-rows: 0.5fr 1fr auto auto;
+        grid-template-rows: 0.5fr 1fr auto auto auto;
         grid-template-areas:   
     "tl tl"
     "img img"
     "sb ar"
-    "sb ar"
+    "ft ft"
+
     ;    
     }
 
@@ -57,7 +60,7 @@ color: gray;
     "tl tl"
     "img img"
     "sb ar"
-    "sb ar"
+    "ft ft"
     ;    
     }
     .sidebar{
@@ -119,4 +122,10 @@ article{
     text-align: center;
     line-height: 3rem;
     width: 95%;
+}
+
+footer{
+    grid-area: ft;
+    margin-top: 0;
+    text-align: left;
 }
