--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,8 @@ body {
     --main-ocean: #11b8be;
     --main-tile: #10a8bf;
     --main-gradient: linear-gradient(180deg, rgba(0, 0, 206, 1) 0%, rgba(17, 184, 190, 1) 100%);
+    --main-rev-gradient: linear-gradient(180deg, rgba(17, 184, 190, 1) 0%, rgba(0, 0, 206, 1) 100%);
+
     --main-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
 }
 
@@ -74,7 +76,7 @@ q{
 }
 
 .sidebar {
-    background-color: var(--main-dark-blue-color);
+    background: var(--main-rev-gradient);
     text-align: center;
     justify-content: center;
 }
@@ -92,7 +94,7 @@ q{
     text-align: center;
     font-size: 25px;
     line-height: 3rem;
-    color: var(--main-tile);
+    color: white;
 }
 
 .sidebar ul li a:hover {
@@ -119,7 +121,7 @@ q{
 
     .sidebar ul li a {
         line-height: 5rem;
-        color: var(--main-tile);
+        color: white;
     }
     .sidebar h2 {
         height: 24vh;
