--- a/css/typography.css
+++ b/css/typography.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Noto+Sans+KR&display=swap');
 
 body {
     font-family: 'Noto Sans KR', sans-serif;
@@ -9,6 +9,15 @@ u{
 h1 {
     font-size: 48px;
     margin-bottom: 25px;
+}
+
+h2{
+    font-size: 40px;
+}
+
+h4{
+    font-size: 25px;
+    text-align: center;
 }
 
 p {
