--- a/css/article.css
+++ b/css/article.css
@@ -1,4 +1,5 @@
 @import "style.css";
+@import "author.css";
 
 .cat-name{
 color: gray;
@@ -7,11 +8,12 @@ color: gray;
 
 .content{
     display: grid;
-    grid-template-rows: 300px 1fr auto auto auto;
+    grid-template-rows: 300px auto 1fr auto auto auto;
     grid-template-columns: 100%;
     
     grid-template-areas:   
     "tl"
+    "ai"
     "img"
     "ar"
     "sb"
@@ -27,12 +29,17 @@ color: gray;
     box-shadow: var(--main-shadow);
 }
 
+.author-container{
+    grid-area: ai;
+}
+
 @media(min-width:1100px){
     .content{
         grid-template-columns: 25% 75%;
-        grid-template-rows: 0.5fr 1fr auto auto auto;
+        grid-template-rows: 0.5fr auto 1fr auto auto auto;
         grid-template-areas:   
     "tl tl"
+    "ai ai"
     "img img"
     "sb ar"
     "ft ft"
@@ -56,9 +63,10 @@ color: gray;
     .content{
         width: 100%;
         grid-template-columns: 25% 75%;
-        grid-template-rows: 300px 1fr auto auto;
+        grid-template-rows: 300px auto 1fr auto auto;
         grid-template-areas:   
     "tl tl"
+    "ai ai"
     "img img"
     "sb ar"
     "ft ft"
